fix z-index

--- a/public/assets/css/_table-mb.scss
+++ b/public/assets/css/_table-mb.scss
@@ -1,3 +1,12 @@
+.table-scroll {
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    margin: auto;
+    overflow: auto;
+    // height: 950px;
+}
+
 .table-scroll::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
